Allow attribute interdigitation on small viewport widths, fixes #356

--- a/assets/styles/sass/event-pages.scss
+++ b/assets/styles/sass/event-pages.scss
@@ -102,71 +102,6 @@
       }
     }
   }
-  
-  & > .attributes {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    
-    width: 100%;
-    
-    border-top: 1px solid $border;
-    padding-top: 5rem;
-    
-    & > .attribute {
-      
-      flex-basis: 33%;
-      width: 33%;
-      min-width: 200px;
-      margin-bottom: 3rem;
-
-      & > a.icon:hover {
-        background: $thisislightblue;
-      }
-      
-      & > .icon {
-        background: #ccc;
-        color: white;
-        border-radius: 10rem 10rem;
-        font-size: 6rem;
-        width: 10rem;
-        height: 10rem;
-        
-        display: block;
-        
-        margin-left: auto;
-        margin-right: auto;
-        
-        &.dress {
-          padding-left: 1.9rem;
-          padding-top: 1.8rem;
-        }
-        &.format {
-          padding-left: 2rem;
-          padding-top: 1.4rem;
-        }
-        &.majors {
-          padding-left: 1.2rem;
-          padding-top: 1.8rem;
-        }
-        &.population {
-          padding-left: 1.8rem;
-          padding-top: 1.5rem;
-        }
-        &.jobs {
-          padding-left: 2rem;
-          padding-top: 1rem;
-        }
-      }
-      & > .details {
-        padding-top: 3rem;
-        text-align: center;
-        font-family: $header-font-family;
-        font-size: 3rem;
-      }
-    }
-  }
-  
   & > .attendants {
     padding: 5rem 0; 
     vertical-align: middle;
@@ -189,6 +124,75 @@
     }
   }
 }
+.attributes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  width: 100%;
+
+  border-top: 1px solid $border;
+  padding-top: 5rem;
+
+  & > .attribute {
+
+    flex-basis: 100%;
+    width: 100%;
+    min-width: 200px;
+    margin-bottom: 3rem;
+
+    & > a[href$=".pdf"]::after {
+      content: none; 
+    }
+    
+    & > a.icon:hover {
+      background: $thisislightblue;
+    }
+
+    & > .icon {
+      background: #ccc;
+      color: white;
+      border-radius: 10rem 10rem;
+      font-size: 6rem;
+      width: 10rem;
+      height: 10rem;
+
+      display: block;
+
+      margin-left: auto;
+      margin-right: auto;
+
+      &.dress {
+        padding-left: 1.9rem;
+        padding-top: 1.8rem;
+      }
+      &.format {
+        padding-left: 2rem;
+        padding-top: 1.4rem;
+      }
+      &.majors {
+        padding-left: 1.2rem;
+        padding-top: 1.8rem;
+      }
+      &.population {
+        padding-left: 1.8rem;
+        padding-top: 1.5rem;
+      }
+      &.jobs {
+        padding-left: 2rem;
+        padding-top: 1rem;
+      }
+    }
+    & > .details {
+      padding-top: 3rem;
+      text-align: center;
+      font-family: $header-font-family;
+      font-size: 3rem;
+    }
+  }
+}
+  
+
 
 .sponsors-header {
   border-top: none;
@@ -228,8 +232,8 @@
   }
   .attributes {
     .attribute {
-      flex-basis: 100%;
-      width: 100%;
+      flex-basis: 33%;
+      width: 33%;
       & > .details {
         padding-top: 1rem;
         padding-bottom: 3rem;
